--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^0.24.0",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0-rc.0-next-811634762-20220110",
     "react-dom": "^18.0.0-rc.0-next-811634762-20220110",
     "react-router-dom": "^6.2.1",
     "react-scripts": "^5.0.0",
+    "react-table": "^6.11.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
