--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "chai": "^4.3.4",
     "mdbreact": "^5.2.0",
     "react": "^18.0.0-rc.0-next-811634762-20220110",
     "react-dom": "^18.0.0-rc.0-next-811634762-20220110",
@@ -14,12 +15,14 @@
     "react-scripts": "^5.0.0",
     "react-table": "^7.7.0",
     "react-table-6": "^6.11.0",
+    "selenium-webdriver": "^4.1.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    
+    "test": "mocha --timeout 10000",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
