--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chai": "^4.3.4",
     "mdbreact": "^5.2.0",
+    "mocha": "^9.1.4",
     "react": "^18.0.0-rc.0-next-811634762-20220110",
     "react-dom": "^18.0.0-rc.0-next-811634762-20220110",
     "react-router-dom": "^6.2.1",
@@ -20,7 +21,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "mocha --timeout 10000",
+    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
