--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,3 +26,8 @@ jobs:
       - run: |
           npm i
           npm run test
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v2
+        with:
+          name: inrecord-test-artifacts
+          path: inrecord.txt
